--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"start": "node node_modules/react-native/local-cli/cli.js start",
+		"kill": "react-native-kill-packager",
+		"start": "react-native run-android",
 		"test": "jest"
 	},
 	"dependencies": {
@@ -11,6 +12,7 @@
 		"native-base": "^2.3.3",
 		"react": "16.0.0",
 		"react-native": "0.50.4",
+		"react-native-kill-packager": "^1.0.0",
 		"react-navigation": "^1.0.0-beta.21"
 	},
 	"devDependencies": {
