--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"react": "16.0.0",
 		"react-native": "0.50.4",
 		"react-native-kill-packager": "^1.0.0",
-		"react-navigation": "^1.0.0-beta.21"
+		"react-navigation": "^1.0.0-beta.21",
+		"socket.io-client": "^2.0.4"
 	},
 	"devDependencies": {
 		"babel-jest": "21.2.0",
